# PyDotPwn

./: .gitignore  ABOUT.md  ABSOLUTE_PATH_ENHANCEMENT.md  COMPREHENSIVE_GUIDE.md  FINAL_STATUS_REPORT.md  GITHUB_PAGES_COMPLETE.md  GUI_DOCUMENTATION.md  GUI_FIXES_SUMMARY.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  REPOSITORY_UPDATE_COMPLETE.md  TEST_DOCUMENTATION.md  VALIDATION_FIX_COMPLETE.md  comprehensive_verification.py  dotdotpwn.py  launch_gui.py  launch_gui.sh  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_tests.py  test_core.py  test_gui_fixes.py  test_path_normalization.py  verification_report.json
docs/: README.md  _config.yml  api-documentation.md  cli-reference.md  examples.md  getting-started.md  gui-guide.md  index.md  path-validation-bypass.md  troubleshooting.md
docs/assets/css/: custom.css
gui/: dotdotpwn_gui.py
src/dotdotpwn/: __init__.py  cli.py  stdout.py
src/dotdotpwn/api/: __init__.py  app.py  main.py
src/dotdotpwn/core/: __init__.py  bisection_algorithm.py  fingerprint.py  traversal_engine.py
src/dotdotpwn/protocols/: __init__.py  ftp_fuzzer.py  http_fuzzer.py  http_url_fuzzer.py  payload_fuzzer.py  tftp_fuzzer.py
src/dotdotpwn/utils/: __init__.py  console_helper.py  reporter.py  ssl_suppression.py
tests/: __init__.py  test_dotdotpwn.py  test_module_validation.py
