[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotdotpwn-python"
version = "3.0.2"
description = "The Directory Traversal Fuzzer - Python Implementation with API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Original Authors: chr1x & nitr0us"},
    {name = "Python Implementation: AI Assistant"},
]
keywords = ["security", "fuzzing", "directory-traversal", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "aiohttp>=3.9.0",
    "dnspython>=2.4.0",
    "cryptography>=41.0.0",
    "python-nmap>=0.7.1",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
dotdotpwn = "dotdotpwn.cli:main"
dotdotpwn-api = "dotdotpwn.api.main:start_server"

[project.urls]
Homepage = "https://github.com/dotdotpwn/dotdotpwn-python"
Repository = "https://github.com/dotdotpwn/dotdotpwn-python"
Documentation = "https://dotdotpwn-python.readthedocs.io"
"Bug Reports" = "https://github.com/dotdotpwn/dotdotpwn-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=dotdotpwn --cov-report=term-missing"
testpaths = ["tests"]